[tool.poetry]
name = "jaeger"
version = "0.7.0"
description = "Controllers for the SDSS-V FPS"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/jaeger"
repository = "https://github.com/sdss/jaeger"
documentation = "https://sdss-jaeger.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "jaeger", from = "python" }
]
include = ["python/jaeger/etc/*"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15.1"
python-can = "^3.1.1"
progressbar2 = "^3.39.3"
sdss-drift = "^0.2.2"
sdss-clu = "^1.0.0"
sdsstools = ">=0.4.2"
click_default_group = "^1.2.2"
daemonocle = "^1.0.2"
peewee = "^3.14.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
ipython = "*"
matplotlib = "*"
invoke = "*"
flake8 = "*"
doc8 = ">=0.8.0"
pytest = ">=6.0"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-sugar = "*"
isort = ">=5.0.0"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
asynctest = {version=">=0.13.0", python="~3.7"}
asyncmock = {version=">=0.4.2", python="~3.7"}
Sphinx = {version = ">=3.0"}
sphinx-click = {version = ">=2.3.0"}
ipdb = ">=0.13.3"
autopep8 = ">=1.5.4"
black = {version = ">=20.8b1", allow-prereleases = true}
rstcheck = ">=3.3.1"
pytest-mock = ">=3.5.1"
pyserial-asyncio = ">=0.5"
sphinx-jsonschema = ">=1.16.8"
myst-parser = ">=0.14.0"

[tool.poetry.scripts]
jaeger = "jaeger.__main__:jaeger"

[tool.black]
line-length = 88
target-version = ['py38']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "jaeger"
known_typing = ["typing"]
known_sdss = ["sdsstools", "clu", "sdssdb", "drift"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "--cov jaeger --cov-report xml --cov-report html --cov-report term"
filterwarnings = [
    "ignore:.*The loop argument is deprecated since.*",
    "ignore:.*Loading an empty FPS.*",
    "ignore:.*They have been added to the.*",
]
markers = [
    "rtd2: Temperature of the RTD2 sensor"
]

[tool.coverage.run]
branch = true
include = ["python/jaeger/*"]
omit = [
    "*/__main__.py",
    "*/__init__.py",
    "*/cannet.py",
    "*/actor/commands/bootloader.py",
    "*/actor/commands/talk.py",
    "*/commands/calibration.py",
    "*/exceptions.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "class AsyncioExecutor",
    "def convert_kaiju_trajectory",
    "class CANnetInterface",
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=49.6.0"]
build-backend = "poetry.core.masonry.api"
