[tool.poetry]
name = "jaeger"
version = "1.2.0b1"
description = "Controllers for the SDSS-V FPS"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/jaeger"
repository = "https://github.com/sdss/jaeger"
documentation = "https://sdss-jaeger.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "jaeger", from = "python" }
]
include = ["python/jaeger/etc/*"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.0"
progressbar2 = "^3.39.3"
sdss-drift = "^0.4.1"
sdss-clu = "^1.5.7"
sdsstools = "^0.5.0"
click_default_group = "^1.2.2"
sdssdb = "^0.5.5"
pandas = "^1.3.4"
tables = "^3.6.1"
astropy = "^5.0.0"
sdss-kaiju = "^1.3.0"
sdss-coordio = "^1.5.0b1"
pydl = "1.0.0rc1"
sep = "^1.2.0"
"zc.lockfile" = "^2.0"

# Pin simplify for Kaiju. 0.6+ has a bug that causes endpoints to go wild.
simplification = "0.5.22"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
invoke = ">=1.3.0"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-sugar = ">=0.9.2"
codecov = ">=2.0.15"
isort = ">=5.0.0"
coverage = {version = ">=5.0", extras = ["toml"]}
Sphinx = {version = ">=3.0"}
sphinx-click = {version = ">=2.3.0"}
ipdb = ">=0.13.3"
autopep8 = ">=1.5.4"
black = {version = ">=21.10b0", allow-prereleases = true}
rstcheck = ">=3.3.1"
pytest-mock = ">=3.5.1"
pyserial-asyncio = ">=0.5"
sphinx-jsonschema = ">=1.16.8"
myst-parser = ">=0.14.0"
furo = ">=2021.6.18-beta.36"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-copybutton = ">=0.3.3"
matplotlib = ">=3.4.3"
pandas-stubs = ">=1.2.0"

[tool.poetry.scripts]
jaeger = "jaeger.__main__:jaeger"
robotcalib = "jaeger.scripts.robotcalib:robotcalib"

[tool.black]
line-length = 88
target-version = ['py39']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "jaeger"
known_typing = ["typing"]
known_sdss = ["sdsstools", "clu", "sdssdb", "drift", "coordio", "kaiju", "fps_calibrations"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "-p no:logging --disable-warnings --cov jaeger --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*The loop argument is deprecated since.*",
    "ignore:.*Loading an empty FPS.*",
    "ignore:.*They have been added to the.*",
]
markers = [
    "rtd2: Temperature of the RTD2 sensor"
]

[tool.coverage.run]
branch = true
include = ["python/jaeger/*"]
omit = [
    "*/__main__.py",
    "*/__init__.py",
    "python/jaeger/testing.py",
    "*/cannet.py",
    "*/interfaces/message.py",
    "*/actor/commands/bootloader.py",
    "*/actor/commands/talk.py",
    "*/commands/calibration.py",
    "*/exceptions.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "class AsyncioExecutor",
    "class CANnetInterface",
    "if TYPE_CHECKING:",
    "def __repr__"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
